# TickerBot

./: .env.example  Procfile  README.md  bot.py  bot1.env  bot2.env  healthcheck.py  pyproject.toml  requirements.txt  test_both_tokens.py  test_final_format.py  test_no_emojis.py  test_prg_price.py  test_prg_standalone.py  tracked_tokens.json
