[tool.poetry]
name = "crypto-price-tracker-bot"
version = "1.0.0"
description = "A Discord bot that tracks cryptocurrency prices from CoinGecko"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "."}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^2.3.2"
python-dotenv = "^1.0.0"
aiohttp = "^3.9.1"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Homepage" = "https://github.com/yourusername/crypto-price-tracker"
"Bug Tracker" = "https://github.com/yourusername/crypto-price-tracker/issues"

[tool.poetry.scripts]
bot = "bot:run_bot"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3 